css/hero.css
.hero {
    background: linear-gradient(0deg, #d4e5ff 2%, #f7faff 28%, #ffffff 50%);
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 30px 15px 38px 15px;
    margin-bottom: 20px;
}

.hero-main {
    width: 100%;
    max-width: 800px;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
}

.hero-text {
    width: 400px;
    text-align: left;
}

.hero-text h1 {
    color: #2d4bb0;
    font-size: 2.6rem;
    font-weight: 400;
    font-family: 'Kalam', cursive;
}

.hero-text .quote {
    color: #111111;
    font-size: 0.94rem;
    margin-bottom: 4px;
}

.hero-text .author {
    color: #333333;
    font-size: 0.9rem;
    font-style: italic;
    text-align: center;
}

.hero-image {
    display: none;
}

.hero-image img {
    width: 200px;
}


@media screen and (min-width: 600px) {
    .hero {
        padding: 35px 20px;
        margin-bottom: 30px;
    }

    .hero-image {
        display: block;
    }

    .hero-main {
        justify-content: space-between;
    }
}

@media screen and (min-width: 800px) {
    .hero {
        padding: 50px 20px 40px 20px;
    }

    .hero-text {
        width: 450px;
    }

    .hero-text h1 {
        font-size: 3.2rem;
    }

    .hero-text .quote {
        font-size: 1rem;
        margin-bottom: 5px;
    }

    .hero-text .author {
        font-size: 0.96rem;
    }

    .hero-image img {
        width: 250px;
    }
}

